public static class AnimatorEnemyController
{
    public static class States
    {
        public const string Idle = "Idle";
        public const string Run = "Run";
    }

    public static class Triggers
    {
        public const string Attack = "Attack";
        public const string Die = "Die";
    }
}